<resources>
    <string name="app_name">Wicked Lista</string>
    <string name="no_categories_found">You have no categories saved.</string>
    <string name="create_category">Create category</string>
    <string name="no_list_message">You have no lists saved.</string>
    <string name="create_a_list">Create a List</string>
    <string name="empty_string"></string>

    <!-- screen title for nav host -->
    <string name="home_screen">Home</string>
    <string name="saved_list_screen">Saved List</string>
    <string name="create_list">Create List</string>
    <string name="add_item">Add Item</string>
    <string name="edit_item">Edit Item</string>

    <!--Create List Labels-->
    <string name="category">Category</string>
    <string name="category_placeholder">e.g. Recipes</string>
    <string name="topic">Topic</string>
    <string name="topic_placeholder">e.g. Pies</string>
    <string name="lists_for">Lists needed for…</string>
    <string name="lists_for_placeholder">e.g. Apple Pie</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="optional">Optional</string>
    <string name="error_message_no_category">&#x2A;Please provide a category</string>
    <string name="error_message_duplicate_category">&#x2A;Unique category required</string>
    <string name="error_message_no_initial_list">Please provide initial list.</string>

    <string name="topic_subtitle">Topic: </string>

    <!--Deletion Dialog-->
    <string name="deletion_message">You are about to delete\n</string>
    <string name="delete">Delete</string>

    <!-- Add Owner Dialog-->
    <string name="add_owner_message">Add an owner of a new list this category.</string>
    <string name="new_owner">New owner</string>
    <string name="add_owner">Add owner</string>
    <string name="error_duplicate_owner">&#x2A;Unique owner required</string>
    <string name="error_message_no_owner">&#x2A;Please provide an owner</string>
    <string name="add_items_hint">To add items.</string>

    <!-- Delete Owner Dialog -->
    <string name="delete_owner_message">Deleting %1$s and all listed items.</string>
    <string name="delete_last_owner_message">This is only list for the category. Please delete category from home screen if list is unnecessary.</string>
    <string name="ok">@android:string/ok</string>

    <!--Content Description-->
    <string name="icon_cdescript">add icon</string>
    <string name="icon_delete_cdescript">delete icon</string>
    <string name="icon_delete_dialog_cdescript">dialog delete icon</string>
    <string name="icon_delete_list_cdescript">delete list icon</string>
    <string name="icon_delete_owner_cdescript">delete owner icon</string>
    <string name="icon_delete_owner_button_cdescript">delete owner icon button</string>
    <string name="icon_add_listitem_cdescript">add item icon </string>
    <string name="icon_add_listitem_button_cdescript">add item icon button</string>
    <string name="icon_add_owner_cdescript">add owner icon</string>
    <string name="add_owner_button_cdescript">add item button</string>
    <string name="add_item_success_message_icon">add success icon</string>
    <string name="category_icon">category icon</string>
    <string name="switch_for_checkbox_cdescript">switch to toggle to checkbox</string>
    <string name="status_checkbox_cdescript">status checkbox</string>

    <!-- Modify Items -->
    <string name="add_item_label">Label</string>
    <string name="add_item_hint">Item name</string>
    <string name="add_item_description_label">Description</string>
    <string name="add_item_description_hint">Details of item</string>
    <string name="add_item_status_help_message">Provide up to 4 possible statuses</string>
    <string name="add_item_status_choose_message">Choose from provided statuses</string>

    <string name="add_item_initial_status_label">Initial status</string>
    <string name="add_item_initial_status_hint">e.g. Need to orders</string>
    <string name="add_item_additional_status_label">Additional status</string>
    <string name="add_item_additional_status_hint">e.g. Ordered</string>
    <string name="add_item_additional_status_hint2">e.g. Received</string>
    <string name="add_item_additional_status_hint3">e.g. Done</string>
    <string name="add_item_checkbox_toggle_message">Use checkbox status</string>
    <string name="add_item_checkbox_label">Label for checkbox</string>
    <string name="add_item_successful_add_message">Item successfully added.</string>
    <string name="done">Done</string>
    <string name="status">Status</string>
    <string name="status_menu_drop_down_icon">status menu drop down icon</string>
    <string name="add_more">Add more</string>
    <string name="select_status_hint">Select status</string>
    <string name="update">Update</string>
    <string name="error_add_item_blank_label">&#x2A;Please provide a label</string>
    <string name="error_add_item_blank_status">&#x2A;Please provide at least one status</string>
    <string name="error_sql_add_item">&#x2A;Trouble add/updating item.</string>
</resources>